Fix switching to default hyva theme

--- a/app/design/frontend/Satoshi/Hyva/Magento_Directory/templates/currency.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Directory/templates/currency.phtml
@@ -3,7 +3,7 @@
 declare(strict_types=1);
 
 use Hyva\Theme\Model\ViewModelRegistry;
-use Hyva\Theme\ViewModel\Currency;
+use Satoshi\Theme\ViewModel\Currency;
 use Magento\Framework\Escaper;
 use Satoshi\Theme\Block\Template;
 
